--- a/public/css/school.css
+++ b/public/css/school.css
@@ -456,7 +456,7 @@ body .box .info .rating {
 }
 
 body .box .info .rating .rating-img {
-    background: no-repeat center url('/img/icons/rating.png');
+    background: no-repeat center url('/Img/icons/rating.png');
     width: 70px;
     height: 70px;
     border-radius: 70px;
